test/for/fun_in_body.lox
// error: expected placeholder variable
for () fn foo() {}